<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.elifen.leaf.UIActivity.RegisterActivity"
    >
<RelativeLayout
    android:id="@+id/leyout_registerActonbar"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:gravity="center_horizontal|center"
        android:text="@string/register"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        />
<ImageButton
    android:id="@+id/btn_back"
    android:layout_width="40dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:src="@drawable/back_icon"
    android:scaleType="centerInside"
    android:background="@color/colorPrimary"
    />
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/string_PhoneNum"
            android:textSize="20sp"
             />
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="昵称："
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_setAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/password"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_setPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <Button
        android:id="@+id/register"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:onClick="onClick"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
</LinearLayout>
